Separated VMCommandType into a separate header, worked more on CodeWriter, reworked VMCommandType objects to use new header

--- a/VirtualMachine/VirtualMachine.vcxproj
+++ b/VirtualMachine/VirtualMachine.vcxproj
@@ -146,6 +146,7 @@
   <ItemGroup>
     <ClInclude Include="CodeWriter.h" />
     <ClInclude Include="Parser.h" />
+    <ClInclude Include="VMEnums.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
