--- a/VirtualMachine/VirtualMachine.vcxproj.filters
+++ b/VirtualMachine/VirtualMachine.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="CodeWriter.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="VMEnums.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
