--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,5 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 /VirtualMachine/StackTest.vm
+/VirtualMachine/SimpleAdd.asm
+/VirtualMachine/SimpleAdd.vm
