--- a/VirtualMachine/VirtualMachine.vcxproj.filters
+++ b/VirtualMachine/VirtualMachine.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="CodeWriter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UtilityFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Parser.h">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="VMEnums.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UtilityFunctions.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
