Added more documentation, created a class for holding program constants

--- a/VirtualMachine/VirtualMachine.vcxproj
+++ b/VirtualMachine/VirtualMachine.vcxproj
@@ -141,12 +141,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CodeWriter.cpp" />
+    <ClCompile Include="Constants.cpp" />
     <ClCompile Include="Parser.cpp" />
     <ClCompile Include="UtilityFunctions.cpp" />
     <ClCompile Include="VirtualMachine.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CodeWriter.h" />
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="Parser.h" />
     <ClInclude Include="UtilityFunctions.h" />
     <ClInclude Include="VMEnums.h" />
