--- a/VirtualMachine/VirtualMachine.vcxproj.filters
+++ b/VirtualMachine/VirtualMachine.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="UtilityFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Constants.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Parser.h">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="UtilityFunctions.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Constants.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
