Improved checks and user notification for invalid arguments

--- a/.gitignore
+++ b/.gitignore
@@ -341,3 +341,4 @@ healthchecksdb
 /VirtualMachine/StackTest.vm
 /VirtualMachine/SimpleAdd.asm
 /VirtualMachine/SimpleAdd.vm
+/VirtualMachine/SimpleAdd.test
